# data-pdf-openai

./: .gitignore  README.md  app.py  ddados.csv  gemini.py  insumos.csv  insumos_construcao.csv  pyproject.toml
